src/test/deca/context/valid/personalTests/testContextObjetHeritage.deca
// Test la declaration d'un objet avec un bloc d'initialisation et l'appel d'une methode

class A {
    int a;
    void m() {
        println("m");
    }
}

class B extends A {
    void n() {
        println("n");
    }
}

{
    A b;
    b = new B();
}