src/test/deca/context/invalid/personalTests/declparam_void_init.deca
class A {
    protected void x ;
    int getX() {
        return x ;
    }
    int getX() {
        return x ;
    }
}

{
    A a = new A() ;
}